--- a/app/globals.css
+++ b/app/globals.css
@@ -1,43 +1,43 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* 
 :not(.keep-border) {
-    border: 0;
-}
+  border: 0;
+} */
 
 :root {
-    /* --foreground: var(--nxp-color-black); */
-    /* --background: var(--nxp-color-off-white); */
+  /* --foreground: var(--nxp-color-black); */
+  /* --background: var(--nxp-color-off-white); */
 }
 
 @media (prefers-color-scheme: dark) {
-    :root {
-        /* --foreground: var(--nxp-color-white); */
-        /* --background: var(--nxp-color-black); */
-    }
+  :root {
+    /* --foreground: var(--nxp-color-white); */
+    /* --background: var(--nxp-color-black); */
+  }
 }
 
 body {
-    /* color: var(--foreground);
+  /* color: var(--foreground);
     background-color: var(--background); */
 }
 
 @layer utilities {
-    .text-balance {
-        text-wrap: balance;
-    }
+  .text-balance {
+    text-wrap: balance;
+  }
 }
 
 .fade-in-section {
-    opacity: 0;
-    visibility: hidden;
-    transition: opacity 0.3s ease-out, transform 0.3s ease-out;
-    will-change: opacity, visibility;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease-out, transform 0.3s ease-out;
+  will-change: opacity, visibility;
 }
 
 .fade-in-section.is-visible {
-    opacity: 1;
-    transform: none;
-    visibility: visible;
+  opacity: 1;
+  transform: none;
+  visibility: visible;
 }
